--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "link-react": "^3.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "resolve-url-loader": "^5.0.0",
     "styled-components": "^5.3.5",
